samples/_failures_safe/1761527193_3ee71e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bd1c45f0.c: In function ‘main’:
./samples/SAFE/__tmp_bd1c45f0.c:164:5: error: expected expression at end of input
  164 |     mat2.rows =
      |     ^~~~
./samples/SAFE/__tmp_bd1c45f0.c:164:5: error: expected declaration or statement at end of input
